syntax = "proto3";

package rpc.user.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

message RegisterRequest {
  string email = 1;        // Required
  string password = 2;     // Required
  string first_name = 3;
  string last_name = 4;
}

message RegisterResponse {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
}

message LoginRequest {
  string email = 1;      // Required
  string password = 2;   // Required
}

message LoginResponse {
  string access_token = 1;
}

service UserService {
  rpc RegisterUser(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/user:register"
      body: "*"
    };
  }
  rpc LoginUser(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/user:login"
      body: "*"
    };
  }
}
